[tool.poetry]
name = "it-designers-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "it_designers_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {version = "^0.76.0", extras = ["all"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
