[tool.poetry]
name = "it-designers-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "it_designers_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {version = "^0.76.0", extras = ["all"]}
SQLAlchemy = "^1.4.36"
asyncpg = "^0.25.0"
alembic = "^1.7.7"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
python-jose = {version = "^3.3.0", extras = ["cryptography"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
